feat: managed to compile the code using AWS SDK v2